# axum-admin

./: .env  Cargo.toml  dev1.db
.cargo/: config.toml
config/: Cargo.toml
entity/: articles.rs  categories.rs  lib.rs  member_bills.rs  member_teams.rs  members.rs  prelude.rs  system_action_logs.rs  system_caches.rs  system_depts.rs  system_dict_data.rs  system_dicts.rs  system_login_logs.rs  system_menus.rs  system_role_menus.rs  system_roles.rs  system_users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240607_063342_create_system_user_table.rs  m20240607_065622_create_system_role_table.rs  m20240607_065629_create_system_dept_table.rs  m20240607_070649_create_system_menu_table.rs  m20240607_070705_create_system_role_menu_table.rs  m20240607_070719_create_system_dict_table.rs  m20240607_070723_create_system_dict_data_table.rs  m20240607_070730_create_system_login_log_table.rs  m20240607_070737_create_system_action_log_table.rs  m20240607_070749_create_system_cache_table.rs  m20240607_070800_create_system_member_table.rs  m20240607_070811_create_system_category_table.rs  m20240607_070827_create_system_article_table.rs
model/: Cargo.toml
model/src/: error.rs  lib.rs
model/src/connect/: mod.rs
model/src/entity/prisma_impl/: lib.rs
model/src/impl/prisma/: mod.rs  system_user.rs
model/src/info/: member.rs  member_bill.rs  member_team.rs  mod.rs  system_action_log.rs  system_cache.rs  system_dept.rs  system_dict.rs  system_dict_data.rs  system_login_log.rs  system_menu.rs  system_role.rs  system_user.rs
service/: Cargo.toml
service/src/: error.rs  lib.rs
service/src/cache/: mod.rs  types.rs
service/src/cache/driver/: database.rs  memory.rs  mod.rs
